# the_amazing_connections

./: .gitignore  README.md  display_db_data.py  evals.db  phase1_pseudocode.py  pyproject.toml  pyrightconfig.json
.devcontainer/: devcontainer.json
.github/workflows/: types.yml
src/: demo.ipynb  demo.py
src/database/: db.py
src/rsa-llms/: cot.py  endpoints.py  game.py  icl_connections.json  naive_solver.py  phase1_pseudocode.py  rsa.py  rsa_solver.py  test_connections.json
src/rsa-llms/prompts/: L1.mustache  cot_with_category.mustache  cot_without_category.mustache  one_shot_with_category.mustache
src/rsa-llms/prompts/naive/: system.mustache  zero_shot.mustache
src/rsallms/: __init__.py  autogen_agents.json  autogen_custom_agent.py  cosine_similarity.py  cot.py  db.py  endpoints.py  game.py  gamestate.py  icl_connections.json  metrics.py  naive_solver.py  rsa_solver.py  run.py  simple_autogen_test.py  stateflow.py  stateflow_test.py  test_connections.json  test_gvc copy.py  test_gvc.py
src/rsallms/prompts/: L0.mustache  S1.mustache  basic.mustache  cot.mustache  fiveshot_with_category.mustache  multi_shot_prompt.mustache  multi_shot_prompt_old.mustache  one_shot_with_category.mustache  one_shot_without_category.mustache  oneshot_with_category.mustache  oneshot_without_category.mustache  zero_shot_with_category.mustache  zero_shot_without_category.mustache
src/rsallms/prompts/gvc/: consensus_agent.mustache  grounding_agent.mustache  guesser_agent.mustache  snap_agent.mustache  validator_agent.mustache
src/rsallms/prompts_bank/: fiveshot_with_without_category.mustache  one_shot_without_category.mustache  threeshot_with_category.mustache  threeshot_without_category.mustache  zero_shot_with_category.mustache
src/rsallms/solvers/: __init__.py  basic.py  cot.py  gvc.py  gvc_2.py  naive.py  rsa.py  snap_gvc.py  solver.py
