
[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "rsa-llms"
version = "0.0.2"
requires-python = ">= 3.12"
readme = "README.md"
description = "A Python library for solving Connections games using the Rational Speech-Act (RSA) framework"
dependencies = [
    "chevron",
    "requests"
]
authors = [
    { name = "Nelson Lojo", email = "nelson.lojo@berkeley.edu"},
    { name = "Ashish Pandian", email = "ashishpandian@berkeley.edu" },
    { name = "Chris Lai", email = "chrislai_502@berkeley.edu" },
    { name = "Jackson ", email = "jacksonlukas@berkeley.edu" },
]
maintainers = [
    { name = "Nelson Lojo", email = "nelson.lojo@berkeley.edu"},
    { name = "Ashish Pandian", email = "ashishpandian@berkeley.edu" },
    { name = "Chris Lai", email = "chrislai_502@berkeley.edu" },
    { name = "Jackson ", email = "jacksonlukas@berkeley.edu" },
]

